--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <img src="images/stoneSmall.png" id="obstacle" hidden>
 <img src="images/stairs2.png" id="stairs" hidden>
-<img src="images/spawnsite.png" id="spawn" hidden>
+<img src="images/delete.png" id="spawn" hidden>
 <img src="images/fan.png" id="fan" hidden>
 <img src="images/hook.png" id="hook" hidden>
 <img src="images/chain.png" id="chain" hidden>
