--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ top:0px;
 
 
 <script src="game.js"></script>
-
+<script src="socEvents.js"></script>
 
   
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
