--- a/index2.htm
+++ b/index2.htm
@@ -33,7 +33,6 @@
 <img src="images/hand.png" id="hand" hidden>
 <img src="images/handClosed.png" id="hand" hidden>
 <img src="images/blinder.png" id="blinder" hidden>
-<img src="images/scrambler.png" id="scrambler" hidden>
 <img src="images/delete.png" id="delete" hidden>
 
 
@@ -56,12 +55,6 @@
 <img src="images/faces/goodfaceUp.png" id="goodfaceUp" hidden>
 <img src="images/faces/goodfaceLeft.png" id="goodfaceLeft" hidden>
 <img src="images/faces/goodfaceRight.png" id="goodfaceRight" hidden>
-
-<img src="images/faces/goodfaceConfused.png" id="goodfaceConfused" hidden>
-<img src="images/faces/goodfaceBlind.png" id="goodfaceBlind" hidden>
-<img src="images/faces/badfaceConfused.png" id="badfaceConfused" hidden>
-<img src="images/faces/badfaceBlind.png" id="badfaceBlind" hidden>
-
 
 <img src="images/faces/thief.png" id="thiefFace" hidden>
 <img src="images/faces/thiefScared.png" id="thieffaceScared" hidden>
@@ -110,15 +103,8 @@ top:0px;
 <script src="blocks/specials/magicBlock.js"></script>
 <script src="blocks/specials/hand.js"></script>
 <script src="blocks/specials/blinder.js"></script>
-<script src="blocks/specials/scrambler.js"></script>
 
-
-<script src="game.js"></script>
-  
-<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-<script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/3.6.3/fabric.min.js"></script>
-<script src="socEvents.js"></script>
+<script src="test.js"></script>
 
 
 </body>
