--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 
 </style>
 
-<script src="lib/fabric.js"></script>
-<script src="lib/jquery-1.11.1.min.js"></script>
-
-
+<script src="lib/fabric-4.0.0.js"></script>
 
 </head>
 <body>
@@ -117,7 +114,6 @@ top:0px;
   
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/3.6.3/fabric.min.js"></script>
 <script src="socEvents.js"></script>
 
 
