--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 <img src="images/blinder.png" id="blinder" hidden>
 <img src="images/scrambler.png" id="scrambler" hidden>
 <img src="images/delete.png" id="delete" hidden>
+<img src="images/Arrow.png" id="arrow" hidden>
+
 
 
 <img src="images/faces/badface.png" id="badface" hidden>
