--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ top:0px;
 <script src="game.js"></script>
   
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+<script src="lib/socketiop2p.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
 <script src="socEvents.js"></script>
 
