--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <img src="images/knife.png" id="knife" hidden>
 <img src="images/motor.png" id="motor" hidden>
 <img src="images/motorBroke.png" id="motorBroke" hidden>
+<img src="images/crystal.png" id="crystal" hidden>
+
 
 <img src="images/stoneSmall.png" id="obstacle" hidden>
 <img src="images/stairs2.png" id="stairs" hidden>
@@ -110,6 +112,7 @@ top:0px;
 <script src="blocks/specials/hand.js"></script>
 <script src="blocks/specials/blinder.js"></script>
 <script src="blocks/specials/scrambler.js"></script>
+<script src="blocks/specials/crystal.js"></script>
 
 
 <script src="game.js"></script>
@@ -117,7 +120,7 @@ top:0px;
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
 <script src="lib/socketiop2p.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-<script src="socEvents.js"></script>
+<!--  <script src="socEvents.js"></script>-->
 
 
 </body>
