--- a/index.html
+++ b/index.html
@@ -81,6 +81,18 @@ left:0px;
 top:0px;
 "></canvas>
 
+<div id="diffSliderDiv" style="z-index: 3;
+	position:fixed;
+	left:200px;
+	top:30px;
+	background-color: transparent;
+	opacity:0.5">
+	<p style="color:LightBlue;"><i>Difficulty:  </i> 
+	<input type="range" width="100" min="0" max="1" value="0" step="0.01" class="slider" id="difficultySlider" style="
+	position:relative; top:10px; direction:rtl;
+	"></p> 
+</div>
+
 <!--<script src="test.js"></script>-->
 
   <script src="util/replay.js"></script>
@@ -120,7 +132,7 @@ top:0px;
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
 <script src="lib/socketiop2p.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-<script src="socEvents.js"></script>
+<!--  <script src="socEvents.js"></script>-->
 
 
 </body>
