--- a/index.html
+++ b/index.html
@@ -99,9 +99,11 @@ top:0px;
 <script src="util/maths.js"></script>
 <script src="util/loadSave.js"></script>
 
+
 <script src="display.js"></script>
 <script src="landscape.js"></script>
 <script src="enemyFactory.js"></script>
+<script src="recorder.js"></script>
 
 
 <script src="robots/person.js"></script>
@@ -132,7 +134,7 @@ top:0px;
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
 <script src="lib/socketiop2p.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-<script src="socEvents.js"></script>
+<!--  <script src="socEvents.js"></script>-->
 
 
 </body>
