--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 <img src="images/stairs2.png" id="stairs" hidden>
 <img src="images/spawnsite.png" id="spawn" hidden>
 <img src="images/fan.png" id="fan" hidden>
-<img src="images/hook.png" id="hook" hidden>
 <img src="images/chain.png" id="chain" hidden>
 <img src="images/chainDark.png" id="chainDark" hidden>
 <img src="images/spring.png" id="spring" hidden>
@@ -103,8 +102,6 @@ top:0px;
 <script src="display.js"></script>
 <script src="landscape.js"></script>
 <script src="enemyFactory.js"></script>
-<script src="recorder.js"></script>
-
 
 <script src="robots/person.js"></script>
 <script src="robots/enemy.js"></script>
@@ -134,7 +131,7 @@ top:0px;
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
 <script src="lib/socketiop2p.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-<!--  <script src="socEvents.js"></script>-->
+<script src="socEvents.js"></script>
 
 
 </body>
